Add glsl-tokenizer via browserify.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="lib/stats.min.js"></script>
     <script src="lib/dat.gui.js"></script>
 
+    <script src="lib/static.js"></script>
+
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
     <script src="js/timer.js"></script>
