--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
     <script src="lib/static.js"></script>
 
+    <script src="js/timer.js"></script>
+    <script src="js/glsl-editor.js"></script>
+
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/timer.js"></script>
     <script src="js/deferredSetup.js"></script>
     <script src="js/deferredRender.js"></script>
     <script src="js/framework.js"></script>
