added mouse position text and a buggy red dot that should be where the mouse is

--- a/index.html
+++ b/index.html
@@ -89,11 +89,20 @@
             bottom: 2em;
             left: 0;
         }
+        #mouse_pos {
+            font-family: sans-serif;
+            color: white;
+            height: 1.4em;
+            position: fixed;
+            bottom: 4em;
+            left: 0;
+        }
     </style>
 </head>
 <body>
     <canvas id="canvas" width="800px" height="600px"></canvas>
     <div id="msgbox"></div>
+    <div id="mouse_pos"></div>
     <div id="debugmodewarning">
         <strong style="font-size: 150%">DEBUG MODE!</strong>
         (Disable before measuring performance.)
