Use haxe-glsl-parser and proof of concept integration.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <script src="lib/stats.min.js"></script>
     <script src="lib/dat.gui.js"></script>
 
-    <script src="lib/static.js"></script>
-
-    <script src="js/timer.js"></script>
-    <script src="js/glsl-editor.js"></script>
+    <script src="profiler/timer.js"></script>
+    <script src="profiler/glsl-editor.js"></script>
+    <script src="profiler/glsl-parser.js"></script>
 
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
@@ -42,6 +41,7 @@
             text-align: center;
             font-family: sans-serif;
             background-color: #000000;
+
             color: #ffff00;
             position: fixed;
             bottom: 0px;
