--- a/index.html
+++ b/index.html
@@ -87,15 +87,19 @@
             height: 1.4em;
             position: fixed;
             bottom: 2em;
-            left: 0;
+            left: 0.5em;
+            padding: 1em;
+            background-color: rgba(0,0,0,0.5);
         }
         #mouse_pos {
             font-family: sans-serif;
             color: white;
             height: 1.4em;
             position: fixed;
-            bottom: 4em;
-            left: 0;
+            bottom: 5.5em;
+            left: 0.5em;
+            padding: 1em;
+            background-color: rgba(0,0,0,0.5);
         }
     </style>
 </head>
