Fix import statement (profiler/ -> lib/).

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="lib/OBJLoader.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/seedrandom.min.js"></script>
+    <script src="lib/glsl-parser.js"></script>
 
     <script src="lib/stats.min.js"></script>
     <script src="lib/dat.gui.js"></script>
 
     <script src="profiler/timer.js"></script>
     <script src="profiler/glsl-editor.js"></script>
-    <script src="profiler/glsl-parser.js"></script>
 
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
