Factor mouse code into profiler.js

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script src="profiler/timer.js"></script>
     <script src="profiler/glsl-editor.js"></script>
+    <script src="profiler/profiler.js"></script>
 
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
