Add sprintf.js and add printing to glsl-parser.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/seedrandom.min.js"></script>
     <script src="lib/glsl-parser.js"></script>
+    <script src="lib/sprintf.js"></script>
 
     <script src="lib/stats.min.js"></script>
     <script src="lib/dat.gui.js"></script>
